# hilbi-clinical-rag

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
data/corpus/: medquad_slice.jsonl
data/eval/: eval_set.jsonl
results/: eval_report.md  eval_report.openai.md
scripts/: __init__.py  ask.py  build_index.py  run_eval.py
src/clinical_rag/: __init__.py  chunking.py  config.py  data_loader.py  deid.py  embeddings.py  index.py  llm.py  metrics.py  pipeline.py  prompt.py  rerank.py  retriever.py
tests/: test_deid.py  test_metrics.py  test_retrieval.py
